--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.16",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
     "framer-motion": "^12.24.10",
     "react": "^19.2.0",
@@ -23,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.11.0",
     "react-router-dom": "^7.11.0",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18"
   },
